--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,7 @@ share/
 include/
 
 # added uncompress data folder
-data/
+data/DisasterResponse.db
 
 # Pycharm config
 .idea/
@@ -144,3 +144,9 @@ data/
 # ignore SQLite files
 notebook/InsertDatabaseName.db
 notebook/.ipynb_checkpoints
+
+# ignore models
+notebook/classifier.pkl
+models/classifier.pkl
+# ignore unnessary data
+notebook/data.csv
